Win Kakuro version 1.0