@@ -2,9 +2,17 @@
 
 ## Compilation / Exécution
 
-- Solution 1 : Exécution du fichier jar via la commande 
-	## java --module-path "javafx-sdk-18\lib" --add-modules javafx.controls,javafx.fxml --add-modules javafx.controls,javafx.media -jar Kakuro.jar
+Important : Le jeu est supporté que sur windows. Pour une future amélioration, nous élaborerons le jeu en cross-platform.
 
-- Solution 2 : Exécuter le fichier exécutable (Min JRE : 10, Max JRE : 16)
+- Version Windows : Disponible
+- Version Linux : COMING SOON ! 
+- Version MacOS : COMING SOON !
 
-- Solution 3 : Installer le jeu sur votre machine avec KakuroSetup.exe
+## Présentation
+
+![Menu!](Screenshot/Menu.PNG)
+![ChoixGrille!](Screenshot/ChoixGrille.PNG)
+![Jeu!](Screenshot/Jeu.PNG)
+![Tutoriel!](Screenshot/Tutoriel.PNG)
+![Classement!](Screenshot/Classement.PNG)
+![Options!](Screenshot/Options.PNG)
